--- a/index.html
+++ b/index.html
@@ -47,5 +47,44 @@
 
             <a-entity camera></a-entity>
         </a-scene>
+        
+        <b-scene
+            vr-mode-ui="enabled: false;"
+            loading-screen="enabled: false;"
+            renderer="logarithmicDepthBuffer: true;"
+            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+            id="scene2"
+            embedded
+            gesture-detector
+        >
+            <b-assets>
+                <b-asset-item
+                    id="animated-asset2"
+                    src="assets/asset2.gltf"
+                ></b-asset-item>
+            </b-assets>
+
+            <b-marker
+                id="animated-marker2"
+                type="pattern"
+                preset="custom"
+                url="assets/marker2.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerb"
+            >
+                <b-entity
+                    id="bowser-model2"
+                    scale="0.1802488602009456 0.1802488602009456 0.1802488602009456"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
+                    class="clickable"
+                    gesture-handler
+                ></b-entity>
+            </b-marker>
+
+            <b-entity camera></b-entity>
+        </b-scene>
     </body>
 </html>
