--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
             <a-entity camera></a-entity>
         </a-scene>
-        
+    </body>
+    
+   <body style="margin: 0; overflow: hidden;">
         <b-scene
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
