--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     id="bowser-model2"
                     scale="0.2896086479639382 0.2896086479639382 0.2896086479639382"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#animated-asset2"
                     class="clickable"
                     gesture-handler
                 ></b-entity>
