--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 ></a-entity>
             </a-marker>
             
-             <a-marker
+        <!--      <a-marker
                 id="animated-marker2"
                 type="pattern"
                 preset="custom"
@@ -68,7 +68,7 @@
                     class="clickable"
                     gesture-handler
                 ></a-entity>
-            </a-marker>
+            </a-marker> -->
 
             <a-entity camera></a-entity>
         </a-scene>
