--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     id="bowser-model"
                     scale="0.1802488602009456 0.1802488602009456 0.1802488602009456"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#animated-asset2"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
