--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/asset2.gltf"
+                    src="assets/asset.gltf"
                 ></a-asset-item>
                 
                 <a-asset-item
@@ -50,7 +50,7 @@
                 ></a-entity>
             </a-marker>
             
-        <!--      <a-marker
+              <a-marker
                 id="animated-marker2"
                 type="pattern"
                 preset="custom"
@@ -68,7 +68,7 @@
                     class="clickable"
                     gesture-handler
                 ></a-entity>
-            </a-marker> -->
+            </a-marker>
 
             <a-entity camera></a-entity>
         </a-scene>
