--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     src="assets/asset2.gltf"
                 ></a-asset-item>
             </a-assets>
+            
+            <a-asset-item
+                    id="animated-asset3"
+                    src="assets/asset3.gltf"
+                ></a-asset-item>
+            </a-assets>
 
             <a-marker
                 id="animated-marker"
@@ -65,6 +71,26 @@
                     scale="0.1802488602009456 0.1802488602009456 0.1802488602009456"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
+                    class="clickable"
+                    gesture-handler
+                ></a-entity>
+            </a-marker>
+        
+        <a-marker
+                id="animated-marker3"
+                type="pattern"
+                preset="custom"
+                url="assets/marker3.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerB"
+            >
+                <a-entity
+                    id="bowser-model3"
+                    scale="0.1802488602009456 0.1802488602009456 0.1802488602009456"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset3"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
